# task_logger

./: .gitignore  CMakeLists.txt  README.md
Log_manager/: CMakeLists.txt  Log_manager.cpp  Log_manager.hpp  Log_writer.cpp  Log_writer.hpp
app/: CMakeLists.txt  main.cpp
stats_app/: CMakeLists.txt  Socket_receiver.cpp  Socket_receiver.hpp  Stats_collector.cpp  Stats_collector.hpp  main.cpp
tests/: CMakeLists.txt  test_logmanager.cpp
thread_app/: CMakeLists.txt  File_manager.cpp  File_manager.hpp  main.cpp
